--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "click-outside-vue3": "^4.0.1",
     "prettier": "^2.5.1",
     "vue": "^3.2.31",
     "vue-router": "^4.2.2",
