--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "^2.5.1",
     "vue": "^3.2.31",
     "vue-router": "^4.2.2",
+    "vue3-smooth-dnd": "^0.0.5",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
   },
