--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "click-outside-vue3": "^4.0.1",
     "prettier": "^2.5.1",
     "vue": "^3.2.31",
-    "vue-router": "^4.2.2",
+    "vue-json-excel3": "^1.0.1",
+    "vue-router": "^4.2.2",    
     "vue3-smooth-dnd": "^0.0.5",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
