--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "axios": "^0.26.0",
     "click-outside-vue3": "^4.0.1",
+    "firebase": "^10.2.0",
     "prettier": "^2.5.1",
     "vue": "^3.2.31",
     "vue-json-excel3": "^1.0.1",
-    "vue-router": "^4.2.2",    
+    "vue-router": "^4.2.2",
+    "vue-svg-loader": "^0.16.0",
     "vue3-smooth-dnd": "^0.0.5",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
@@ -25,7 +27,10 @@
     "@types/tailwindcss": "^3.0.9",
     "@vitejs/plugin-vue": "^2.2.4",
     "autoprefixer": "^10.4.2",
+    "node-sass": "^9.0.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "sass": "^1.44.0",
+    "sass-loader": "^10.2.0",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.6"
   }
