--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "@syncfusion/ej2-vue-schedule": "^23.2.4",
+    "axios": "^1.6.2",
     "click-outside-vue3": "^4.0.1",
     "firebase": "^10.2.0",
     "firebase-tools": "^0.1.6",
